# 3rd-course

computational mathematics/cubic spline/: CubicSpline1.py  CubicSpline2.py  README.md
computational mathematics/final differences/: README.md
computational mathematics/proaching method/: ProachingMethod1.py  ProachingMethod2.py
computational mathematics/solving algebraic equations/: README.md  main.c
networks and telecommunications/lab1/: README.md
networks and telecommunications/lab2/: README.md
networks and telecommunications/lab3/: README.md
networks and telecommunications/lab4/: README.md
networks and telecommunications/lab5/: README.md
object-oriented analysis and design/: Use Cases.asta
operation systems/: README.md
operation systems/lab1/: README.md  makefile
operation systems/lab2/: README.md
operation systems/lab3/: README.md
operation systems/lab3/CACHE_PROXY/: CMakeLists.txt
operation systems/lab3/CACHE_PROXY/include/: cache.h  env.h  log.h  message.h  proxy.h  thread_pool.h
operation systems/lab3/CACHE_PROXY/picohttpparser/: picohttpparser.h
operation systems/lab3/CACHE_PROXY/src/: cache.c  entry.c  env.c  log.c  main.c  message.c  proxy.c  thread_pool.c
translation and verification methods/: README.md
translation and verification methods/lab1/: README.md
translation and verification methods/lab10/: README.md  funnier.ohm.t  funnier.ts  index.ts  parser.ts  resolver.ts
translation and verification methods/lab11/: README.md
translation and verification methods/lab2/: README.md  calculate.ts  index.ts  rpn.ohm  (+2 more)
(+245 files in other folders)
